# kickstart-cxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
cmake/: ArtifactNaming.cmake  CompileOptions.cmake  Coverage.cmake  Logging.cmake  PrintDiagnostics.cmake  Sanitize.cmake  StdLibrary.cmake
conan/: conanfile.py
conan/profiles/: debug  release
coverage/: clear-coverage.sh  collect-coverage.sh  llvm-gcov.sh
kickstart/: CMakeLists.txt  main.cpp
kickstart/kickstart/: main.cpp
libkickstart/: CMakeLists.txt
libkickstart/kickstart/: CMakeLists.txt
libkickstart/kickstart/greetings/: format_hi.cpp  format_hi.hpp
libkickstart/tests/unit/: CMakeLists.txt
libkickstart/tests/unit/greetings/: hi.cpp
